--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "homepage": "https://github.com/goliatone/simple-process-manager#readme",
   "dependencies": {
     "caporal": "^1.3.0",
-    "gextend": "^0.6.0"
+    "fs-extra": "^8.1.0",
+    "gextend": "^0.6.0",
+    "untildify": "^4.0.0"
   },
   "devDependencies": {
     "bogota": "^2.0.4",
